--- a/heavycenter/src/main/res/layout/frag_mana_user.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_user.xml
@@ -11,7 +11,7 @@
         android:id="@+id/content_acct"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_hv_base"
+        android:background="@color/color_grey_300"
         android:orientation="vertical">
 
         <com.android.lib.view.title.TitleView
