--- a/heavycenter/src/main/res/layout/frag_mana_car_my.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car_my.xml
@@ -10,12 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/white"
+        android:background="@color/color_grey_300"
         >
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            app:srlEnablePureScrollMode="true"
-            app:srlEnableLoadmore="true"
-            app:srlDragRate="0.1"
             android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
