--- a/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_nobind.xml
@@ -15,46 +15,61 @@
             android:id="@+id/title"
             style_common:txt_mid ="绑定单位"
             style_common:iv_right ="@drawable/icon_hv_scan"
+            style_common:iv_left ="@drawable/icon_hv_person"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:layout_weight="1"
                 android:layout_centerInParent="true"
-                android:gravity="center_horizontal"
+                android:gravity="center_horizontal|bottom"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="0dp">
                 <ImageView
-                    android:src="@drawable/icon_hv_myce_car"
+                    android:layout_marginBottom="10dp"
+                    android:src="@drawable/icon_hv_myce_unit_nobind"
                     android:layout_width="100dp"
                     android:layout_height="100dp" />
 
                 <TextView
                     android:layout_marginTop="10dp"
                     android:text="您是非驾驶员，必须先绑定单位"
-                    android:textSize="14sp"
-                    android:textColor="@color/color_base_txt_gray"
+                    android:textSize="15sp"
+                    android:textColor="@color/color_grey_500"
                     android:singleLine="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:gravity="center_horizontal"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+
                 <TextView
                     android:id="@+id/bind"
                     android:text="立刻绑定"
-                    android:textSize="16sp"
+                    android:textSize="20sp"
                     android:textColor="@color/white"
                     android:gravity="center"
                     android:background="@drawable/drawable_hv_bg_btn_login"
                     android:layout_marginTop="40dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="30dp" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
-        </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </layout>
