--- a/heavycenter/src/main/res/layout/frag_mana_user_new.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_user_new.xml
@@ -9,7 +9,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
+        android:clickable="true"
         android:background="@color/white"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/item_name"
             style_common:minwidth ="40dp"
             style_common:txt_left = "姓名"
             style_common:txt_mid = "请输入"
@@ -29,6 +30,9 @@
             android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.item.NewUnitMyceItem
+            android:id="@+id/item_tel"
+            style_common:inputType="0"
+            style_common:txt_maxlenth="11"
             style_common:minwidth ="40dp"
             style_common:txt_left = "手机号"
             style_common:txt_mid = "请输入"
@@ -45,7 +49,7 @@
             android:layout_height="@dimen/dimen_item_content_h">
 
             <TextView
-                android:id="@+id/tv_left"
+
                 android:layout_marginLeft="8dp"
                 android:text="角色"
                 android:textSize="15dp"
@@ -56,9 +60,11 @@
 
 
             <TextView
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/bg_hv_sel_sharp10_yell_while"
-                android:textColor="@color/color_yell_white"
+                android:id="@+id/one"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/bg_hv_sel_sharp10_while_yell"
+                android:textColor="@color/color_white_yell"
                 android:textSize="16sp"
                 android:text="用户"
                 android:paddingLeft="17dp"
@@ -69,9 +75,11 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/two"
                 android:layout_marginLeft="10dp"
-                android:background="@drawable/bg_hv_sel_sharp10_yell_while"
-                android:textColor="@color/color_yell_white"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/bg_hv_sel_sharp10_while_yell"
+                android:textColor="@color/color_white_yell"
                 android:textSize="16sp"
                 android:text="驾驶员"
                 android:paddingLeft="17dp"
@@ -82,10 +90,11 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/three"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="5dp"
-                android:background="@drawable/bg_hv_sel_sharp10_yell_while"
-                android:textColor="@color/color_yell_white"
+                android:background="@drawable/bg_hv_sel_sharp10_while_yell"
+                android:textColor="@color/color_white_yell"
                 android:textSize="16sp"
                 android:text="管理员"
                 android:paddingLeft="17dp"
@@ -100,12 +109,15 @@
         </LinearLayout>
 
 
-        <TextView
+
+        <LinearLayout
+            android:gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <com.siweisoft.heavycenter.module.view.text.BgTextView
+
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/bg_hv_press_sharp20_yell_while"
-            android:textColor="@color/color_yell_white"
             android:textSize="16sp"
             android:text="发送邀请"
             android:paddingLeft="30dp"
@@ -113,14 +125,37 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:textSize="14sp"
-            android:textColor="@color/color_grey_400"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="您也可以使用右上角扫一扫，\n 通过扫描对方二维码开快速邀请对方!"
+            android:id="@+id/enter"
+
+            android:singleLine="true"
+            android:visibility="visible"
+            style_common:color_one="@color/color_hv_yelll"
+            style_common:stroke="0dp"
+            style_common:color_stroke="@color/red"
+            style_common:corner="20dp"
+            style_common:color_txt="@color/white"
+
+            style_common:color_two="@color/color_grey_400"
+            style_common:stroke_two="0dp"
+            style_common:color_stroke_two="@color/color_hv_yelll"
+            style_common:corner_two="20dp"
+            style_common:color_txt_two="@color/color_hv_yelll"
+            style_common:boo_one="true"
+ />
+        </LinearLayout>
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_centerInParent="true"
+                android:textSize="14sp"
+                android:textColor="@color/color_grey_400"
+                android:gravity="center"
+                android:text="您也可以使用右上角扫一扫，\n 通过扫描对方二维码开快速邀请对方!"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
     </LinearLayout>
 </layout>
