--- a/heavycenter/src/main/res/layout/frag_myce_unit_bind_tip_nullunit.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_bind_tip_nullunit.xml
@@ -84,7 +84,7 @@
                     android:layout_marginBottom="10dp"
                     android:paddingLeft="30dp"
                     android:paddingRight="30dp"
-                    android:id="@+id/tv_close"
+                    android:id="@+id/tv_n"
                     android:text="返回"
                     android:textSize="22sp"
                     android:textColor="@color/white"
@@ -103,7 +103,7 @@
                         android:layout_marginBottom="10dp"
                         android:paddingLeft="30dp"
                         android:paddingRight="30dp"
-                        android:id="@+id/tv_sure"
+                        android:id="@+id/tv_y"
                         android:text="确定"
                         android:textSize="22sp"
                         android:textColor="@color/white"
