--- a/heavycenter/src/main/res/layout/frag_main_store_check.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_check.xml
@@ -29,6 +29,7 @@
                 android:layout_height="wrap_content">
 
                 <TextView
+                    android:textSize="15sp"
                     android:gravity="center"
                     android:text="仓库编号"
                     android:textColor="@color/color_grey_700"
@@ -36,6 +37,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:textSize="15sp"
                     android:gravity="center"
                     android:text="物料名称\n及规格"
                     android:textColor="@color/color_grey_700"
@@ -44,6 +46,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:textSize="15sp"
                     android:gravity="center"
                     android:text="当前库存\n盘点库存"
                     android:textColor="@color/color_grey_700"
@@ -51,6 +54,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
                 <TextView
+                    android:textSize="15sp"
                     android:gravity="center"
                     android:text="盘点盈亏"
                     android:textColor="@color/color_grey_700"
