--- a/heavycenter/src/main/res/layout/item_mana_car_my.xml
+++ b/heavycenter/src/main/res/layout/item_mana_car_my.xml
@@ -25,13 +25,9 @@
 
     <RelativeLayout
         android:id="@+id/ll_container"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:background="@color/white"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:paddingTop="10dp">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -39,6 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             >
 
 
@@ -115,7 +113,7 @@
         </LinearLayout>
         <View
             android:layout_alignParentBottom="true"
-            android:background="@color/color_grey_500"
+            android:background="@color/color_grey_300"
             android:layout_width="match_parent"
             android:layout_height="1px"/>
     </RelativeLayout>
