--- a/heavycenter/src/main/res/layout/item_mana_user.xml
+++ b/heavycenter/src/main/res/layout/item_mana_user.xml
@@ -19,7 +19,7 @@
             android:text="解除\n绑定"
             android:orientation="horizontal"
             android:background="@color/red"
-            android:id="@+id/bottom_wrapper"
+            android:id="@+id/munu"
             android:layout_width="55dp"
             android:weightSum="1"
             android:layout_height="match_parent"/>
