--- a/heavycenter/src/main/res/layout/item_store_progress.xml
+++ b/heavycenter/src/main/res/layout/item_store_progress.xml
@@ -15,11 +15,13 @@
         android:layout_centerInParent="true"
         android:layout_height="10dp">
         <View
+            android:id="@+id/now"
             android:background="@drawable/bg_hv_sharp10_gradient_yell_blue"
             android:layout_width="200dp"
             android:layout_height="match_parent"/>
 
         <View
+            android:id="@+id/min"
             android:layout_marginTop="1dp"
             android:layout_marginBottom="1dp"
             android:layout_marginLeft="140dp"
