--- a/heavycenter/src/main/res/layout/frag_main_order.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order.xml
@@ -17,6 +17,7 @@
             android:id="@+id/title"
             style_common:iv_left ="@drawable/icon_hv_person"
             style_common:iv_right ="@drawable/icon_hv_scan"
+            style_common:iv_right2 ="@drawable/icon_hv_add"
             style_common:txt_mid ="订单"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
