--- a/heavycenter/src/main/res/layout/frag_myce_unit_bind_tip_leave.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_bind_tip_leave.xml
@@ -38,7 +38,7 @@
 
                 <ImageView
                     android:layout_centerVertical="true"
-                    android:id="@+id/iv_close"
+                    android:id="@+id/close"
                     android:src="@drawable/icon_hv_close"
                     android:layout_alignParentRight="true"
                     android:layout_width="20dp"
@@ -77,7 +77,7 @@
                         android:layout_marginBottom="10dp"
                         android:paddingLeft="30dp"
                         android:paddingRight="30dp"
-                        android:id="@+id/tv_sure"
+                        android:id="@+id/sure"
                         android:text="确定"
                         android:textSize="22sp"
                         android:textColor="@color/white"
