--- a/heavycenter/src/main/res/layout/frag_myce_unit_list.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_list.xml
@@ -3,7 +3,7 @@
     xmlns:SmartRefreshLayout="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
-            name="frag_myce_unit_bind"
+            name="frag_myce_unit_list"
             type="String" />
     </data>
 
