--- a/heavycenter/src/main/res/layout/item_main_order_begin.xml
+++ b/heavycenter/src/main/res/layout/item_main_order_begin.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item_main_order_begin"
-            type="String" />
+            type="com.siweisoft.heavycenter.data.netd.order.list.OrdersRes.ResultsBean" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -36,7 +36,7 @@
                         android:singleLine="true"
                         android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:text="混凝土"
+                        android:text="@{item_main_order_begin.productName}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -45,7 +45,7 @@
                         android:layout_marginLeft="10dp"
                         android:textColor="@color/white"
                         android:textSize="18sp"
-                        android:text="D150"
+                        android:text="@{item_main_order_begin.specification}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                     <View
@@ -58,7 +58,7 @@
                         android:layout_marginLeft="7dp"
                         android:textColor="@color/color_yell_blue"
                         android:textSize="8.5sp"
-                        android:text="沪A2345"
+                        android:text='@{"计划: "+item_main_order_begin.planNumber}'
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
@@ -71,13 +71,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/tv_type"
                 android:background="@drawable/bg_hv_sharp2_blue_solid"
                 android:layout_gravity="right|center_vertical"
                 android:gravity="center_vertical"
                 android:singleLine="true"
                 android:textColor="@color/black"
                 android:textSize="11sp"
-                android:text="来自"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -88,7 +88,7 @@
                 android:layout_marginLeft="8dp"
                 android:textColor="@color/white"
                 android:textSize="15sp"
-                android:text="上海绿地"
+                android:text="@{item_main_order_begin.shdwName}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -103,7 +103,6 @@
                 android:layout_marginLeft="10dp"
                 android:textColor="@color/color_hv_txt_dark"
                 android:textSize="12sp"
-                android:text="计划开始时间：2017/12/12 10:10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
