--- a/heavycenter/src/main/res/layout/item_mana_good.xml
+++ b/heavycenter/src/main/res/layout/item_mana_good.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="item_mana_good"
-            type="com.siweisoft.heavycenter.data.netd.mana.store.list.StoresResBean.ResultsBean" />
+            type="com.siweisoft.heavycenter.data.netd.mana.good.list.GoodListRes.ResultsBean" />
     </data>
     <com.daimajia.swipe.SwipeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -56,10 +56,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp">
                     <TextView
+                        android:text='@{item_mana_good.productName+"  "+item_mana_good.specifications}'
                         android:singleLine="true"
                         android:textColor="@color/black"
                         android:textSize="16sp"
-                        android:text="@{item_mana_good.warehouseName}"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
 
@@ -68,6 +68,14 @@
                         android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="1dp"/>
+
+                    <TextView
+                        android:text="@{item_mana_good.warehouseName}"
+                        android:singleLine="true"
+                        android:textColor="@color/black"
+                        android:textSize="16sp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
@@ -78,6 +86,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp">
                     <TextView
+                        android:text='@{"送货区域: "+item_mana_good.belongArea}'
                         android:id="@+id/tv_minstock"
                         android:layout_weight="1"
                         android:singleLine="true"
@@ -86,15 +95,6 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content" />
 
-                    <TextView
-                        android:id="@+id/tv_maxstock"
-                        android:layout_weight="1"
-                        android:layout_marginLeft="10dp"
-                        android:singleLine="true"
-                        android:textColor="@color/gray"
-                        android:textSize="14sp"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
