--- a/heavycenter/src/main/res/layout/frag_main_trans.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans.xml
@@ -24,6 +24,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+
+
             <ImageView
                 android:id="@+id/iv_nodata"
                android:layout_centerInParent="true"
@@ -42,7 +44,10 @@
 
 
         </com.scwang.smartrefresh.layout.SmartRefreshLayout>
-
+            <include
+                android:visibility="gone"
+                android:id="@+id/search"
+                layout="@layout/frag_main_trans_search"/>
         </RelativeLayout>
     </LinearLayout>
 </layout>
