--- a/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car_detail.xml
@@ -74,7 +74,7 @@
         </RelativeLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="110dp"
+            android:layout_height="150dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
@@ -83,6 +83,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/ll_vehiclePhoto"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
@@ -95,6 +96,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iv_vehiclePhoto"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -110,6 +112,7 @@
 
 
             <LinearLayout
+                android:id="@+id/ll_vehicleLicensePhoto"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="10dp"
@@ -122,6 +125,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/iv_vehicleLicensePhoto"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -130,7 +134,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="上传车辆照片"
+                    android:text="上传驾驶证照片"
                     android:textColor="@color/color_hv_txt_dark"
                     android:textSize="12sp" />
             </LinearLayout>
