--- a/heavycenter/src/main/res/layout/frag_myce.xml
+++ b/heavycenter/src/main/res/layout/frag_myce.xml
@@ -31,6 +31,100 @@
 
 
         <com.android.lib.view.item.ItemView
+            android:id="@+id/item_driver"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style_common:txt_left=""
+            style_common:txt_right="5"
+            style_common:iv_left="@drawable/icon_hv_myce_good"
+            style_common:iv_right="@drawable/icon_hv_into"
+            style_common:txt_right_bg="@drawable/bg_cricle_yel"
+            style_common:bg_divider="@color/color_item_content_gap"
+            />
+
+
+        <LinearLayout
+            android:id="@+id/ll_car"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/color_item_content"
+            android:paddingLeft="@dimen/dimen_item_content_left_padding">
+            <LinearLayout
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_item_content_h">
+
+                <ImageView
+                    android:src="@drawable/icon_hv_myce_good"
+                    android:layout_width="@dimen/dimen_item_content_left_icon_size"
+                    android:layout_height="@dimen/dimen_item_content_left_icon_size" />
+
+                <TextView
+                    android:id="@+id/tv_emptyweight"
+                    android:layout_marginLeft="8dp"
+                    android:textSize="13sp"
+                    android:textColor="@color/color_grey_500"
+                    android:gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+
+                <TextView
+                    android:id="@+id/tv_maxweight"
+                    android:layout_marginLeft="15dp"
+                    android:textSize="13sp"
+                    android:textColor="@color/color_grey_500"
+                    android:gravity="center_vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" />
+                <View
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"/>
+
+
+                <ImageView
+                    android:textSize="12.5sp"
+                    android:layout_centerInParent="true"
+                    android:text="3"
+                    android:gravity="center"
+                    android:layout_marginRight="22.5dp"
+                    android:layout_width="@dimen/dimen_item_content_right_icon_size"
+                    android:layout_height="@dimen/dimen_item_content_right_icon_size"  />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginRight="17sp"
+                android:layout_marginLeft="17sp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/iv_dirver"
+                    android:layout_marginRight="7dp"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp" />
+
+                <ImageView
+                    android:id="@+id/iv_car"
+                    android:layout_marginLeft="7dp"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="100dp" />
+            </LinearLayout>
+
+            <View
+                android:id="@+id/divide"
+                android:background="@color/color_item_content_gap"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_item_content_gap_size"/>
+        </LinearLayout>
+
+        <com.android.lib.view.item.ItemView
             android:id="@+id/item_store"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
